--- a/WebContent/resources/templates/pattern.xhtml
+++ b/WebContent/resources/templates/pattern.xhtml
@@ -7,9 +7,11 @@
 
 <ui:decorate template="/resources/templates/template.xhtml">	
 
-	<!-- Conteúdo do Centro -->
+	<!-- Center Content -->
 	<ui:define name="conteudo_centro">
-
+		<h:form>
+		
+		</h:form>
 	</ui:define>
 	
 </ui:decorate>
