--- a/WebContent/resources/templates/template.xhtml
+++ b/WebContent/resources/templates/template.xhtml
@@ -16,8 +16,8 @@
 			<h:form>
 				<p:menubar>
 					<f:facet name="options">
-						<p:commandButton value="Home" icon="ui-icon-home" />
-						<p:commandButton value="Vinícius de A. Ramos" icon="ui-icon-person" />
+						<p:commandButton value="Home" action="home" icon="ui-icon-home" />
+						<p:commandButton value="Vinícius de A. Ramos" action="edit_personal_data" icon="ui-icon-person" />
 						<p:commandButton value="Logout" action="#{sessionBean.logout()}" icon="ui-icon-close" />
 					</f:facet>
 				</p:menubar>
