--- a/WebContent/resources/css/default.css
+++ b/WebContent/resources/css/default.css
@@ -15,7 +15,7 @@
 	font-family: OpenSans;
 }
 
-.error-header {
+/* .error-header {
 	font-family: OpenSans;
 	position: fixed;
 	top: 0%;
@@ -28,4 +28,9 @@
 	color: white;
 	font-size: 22px;
 	box-shadow: 0px 0px 20px #0a0a0a;
+} */
+
+.ui-ring-item {
+	width:  15em !important;
+	height: 7em !important;
 }
