--- a/WebContent/resources/css/login.css
+++ b/WebContent/resources/css/login.css
@@ -1,9 +1,15 @@
 @CHARSET "US-ASCII";
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
+@import
+	url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
 
 body {
-	background-color: #35383D;
+	background-image: url("/BionimbuzClient/resources/img/bground.jpg");
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	/* background-color: #35383D; */
 }
 
 input {
@@ -17,7 +23,7 @@ input {
 	transition: border .5s;
 }
 
-input:focus {	
+input:focus {
 	box-shadow: none;
 }
 
@@ -71,7 +77,7 @@ input:focus {
 	width: 100%;
 	display: block;
 	color: white;
-	font-size: 22px;	
+	font-size: 22px;
 	box-shadow: 0px 0px 20px #0a0a0a;
 }
 
