Fixing web content structure

--- a/WebContent/resources/templates/template.xhtml
+++ b/WebContent/resources/templates/template.xhtml
@@ -17,7 +17,7 @@
 				<p:menubar>
 					<f:facet name="options">
 						<p:commandButton value="Home" action="home" icon="ui-icon-home" />
-						<p:commandButton value="#{sessionBean.loggedUser.nome}" action="edit_personal_data" icon="ui-icon-person" />
+						<p:commandButton value="#{sessionBean.loggedUser.nome}" action="edit_profile" icon="ui-icon-person" />
 						<p:commandButton value="Logout" action="#{sessionBean.logout()}" icon="ui-icon-close" />
 					</f:facet>
 				</p:menubar>
