Now workflow is done in two steps: element selection and workflow design

--- a/WebContent/resources/templates/template.xhtml
+++ b/WebContent/resources/templates/template.xhtml
@@ -13,9 +13,9 @@
     <h:body>
         <p:layout fullPage="true">
             <!-- Superior Menu -->
-            <p:layoutUnit position="north" size="57">
+            <p:layoutUnit position="north" size="62">
                 <h:form>
-                    <p:menubar>
+                    <p:menubar style="margin: 5px">
                         <f:facet name="options">
                             <p:commandButton value="Home" action="home" icon="ui-icon-home" />
                             <p:commandButton value="#{sessionBean.loggedUser.nome}" action="edit_profile" icon="ui-icon-person" />
