--- a/WebContent/resources/templates/template.xhtml
+++ b/WebContent/resources/templates/template.xhtml
@@ -7,7 +7,7 @@
 
     <h:head>
         <h:outputStylesheet library="css" name="default.css" />
-        <link rel="shortcut icon" type="image/x-icon" href="/favicon/favicon.ico" />
+        <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
     </h:head>
 
     <h:body>
