Added WorkflowStatus. Starting BioNimbuz Core integration...

--- a/WebContent/resources/templates/template.xhtml
+++ b/WebContent/resources/templates/template.xhtml
@@ -8,6 +8,7 @@
     <h:head>
         <h:outputStylesheet library="css" name="default.css" />
         <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
+        <h:outputScript library="primefaes" name="jquery/jquery.js"/>
     </h:head>
 
     <h:body>
