Workflow management incremented

--- a/WebContent/resources/templates/template.xhtml
+++ b/WebContent/resources/templates/template.xhtml
@@ -32,10 +32,10 @@
                     <p:panelMenu>
                         <!-- Job submenu -->
                         <p:submenu label="Tarefas">
-                            <p:menuitem value="Submeter Tarefa" action="pipeline_composer"/>
-                            <p:menuitem value="Cancelar Tarefa" action="cancel_job"/>
-                            <p:menuitem value="Visualizar Status de Tarefa" action="job_status" />
-                            <p:menuitem value="Histórico de Tarefas" action="job_history"/>
+                            <p:menuitem value="Novo Workflow" action="pipeline_composer"/>
+                            <p:menuitem value="Status dos Workflows" action="workflow_status" />
+                            <p:menuitem value="Cancelar Workflow" action="cancel_workflow"/>
+                            <p:menuitem value="Histórico de Workflow" action="workflow_history"/>
                         </p:submenu>
 
                         <!-- Storage submenu -->
