Changed from PipelineComposer to WorkflowComposer

--- a/WebContent/resources/templates/template.xhtml
+++ b/WebContent/resources/templates/template.xhtml
@@ -32,7 +32,7 @@
                     <p:panelMenu>
                         <!-- Job submenu -->
                         <p:submenu label="Tarefas">
-                            <p:menuitem value="Novo Workflow" action="pipeline_composer"/>
+                            <p:menuitem value="Novo Workflow" action="workflow_composer"/>
                             <p:menuitem value="Status dos Workflows" action="workflow_status" />
                             <p:menuitem value="Cancelar Workflow" action="cancel_workflow"/>
                             <p:menuitem value="Histórico de Workflow" action="workflow_history"/>
