--- a/WebContent/resources/templates/template.xhtml
+++ b/WebContent/resources/templates/template.xhtml
@@ -9,6 +9,7 @@
         <h:outputStylesheet library="css" name="default.css" />
         <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
         <h:outputScript library="primefaes" name="jquery/jquery.js"/>
+        <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha3.js"></script>
     </h:head>
 
     <h:body>
