Some minor changes in workflow handling

--- a/WebContent/resources/templates/template.xhtml
+++ b/WebContent/resources/templates/template.xhtml
@@ -31,7 +31,7 @@
             <p:layoutUnit position="west" size="250">
                 <h:form>
                     <p:panelMenu>
-                        <!-- Job submenu -->
+                        <!-- Workflow submenu -->
                         <p:submenu label="Tarefas">
                             <p:menuitem value="Novo Workflow" action="workflow_composer"/>
                             <p:menuitem value="Status dos Workflows" action="workflow_status" />
