Many changes: added references and supported formats to configurations (GetServices Action -> GetConfigurations) and workflow composer HTML page. Implemented RestService.ping(). Now users can download output files by the workflows hystory page.

--- a/WebContent/resources/css/default.css
+++ b/WebContent/resources/css/default.css
@@ -5,6 +5,11 @@
     src: url('#{resource['font/Exo.otf']}');
 }
 
+@font-face {
+    font-family: 'Consola';
+    src: url('#{resource['font/consola.ttf']}');
+}
+
 body {
     font-size: 11px;
 }
@@ -86,4 +91,8 @@ body {
 .icon-plus {
     border-radius: 0px !important;
     background-image: url('#{resource['icon/custom-plus-icon-2.png']}') !important;
+}
+
+.font-courier {
+    font-family: Consola !important; 
 }
