new page, statistics and configurations

--- a/WebContent/resources/templates/template.xhtml
+++ b/WebContent/resources/templates/template.xhtml
@@ -59,15 +59,12 @@
                             <p:menuitem value="Deletar Arquivo" action="delete_file"/>
                             <p:menuitem value="Realizar Download" action="download_file" />
                         </p:submenu>
-                        
-                         <p:submenu label="Painel Administrativo">
-                            <p:menuitem value="Elasticidade" action="elasticity"/>
+                                                
+                        <p:submenu label="Estatísticas">
+                            <p:menuitem value="Estatísticas das VM's" action="statistics"/>
+                            <p:menuitem value="Configurações" action="configurations"/>
                         </p:submenu>
-
-                        <!-- Statistics' Menu - NOT IMPLEMENTED --> 
-                        <!--                        <p:submenu label="Estatísticas">
-                                                    <p:menuitem value="Estatísticas de Execução" />
-                                                </p:submenu>-->
+                        
                     </p:panelMenu>
                 </h:form>
             </p:layoutUnit>
