--- a/WebContent/resources/templates/template.xhtml
+++ b/WebContent/resources/templates/template.xhtml
@@ -7,7 +7,7 @@
 
     <h:head>
         <h:outputStylesheet library="css" name="default.css" />
-        <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
+        <link rel="shortcut icon" type="image/x-icon" href="#{request.contextPath}/resources/favicon/favicon.ico" />
         <!--<h:outputScript library="primefaces" name="jquery/jquery.js"/>-->
         <!--<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha3.js"></script>-->
     </h:head>
