--- a/WebContent/resources/css/error.css
+++ b/WebContent/resources/css/error.css
@@ -4,7 +4,7 @@
 	url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
 
 body {
-	background-image: url("/BionimbuzClient/resources/img/bground.jpg");
+	background-image: url("resources/img/bground.jpg");
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
