começando procedimento de merge da versão final

--- a/WebContent/resources/templates/template.xhtml
+++ b/WebContent/resources/templates/template.xhtml
@@ -60,9 +60,10 @@
                             <p:menuitem value="Realizar Download" action="download_file" />
                         </p:submenu>
                                                 
-                        <p:submenu label="Estatísticas">
-                            <p:menuitem value="Estatísticas das VM's" action="statistics"/>
-                            <p:menuitem value="Configurações" action="configurations"/>
+                        <p:submenu label="Configurações e Estatísticas">
+                            <p:menuitem value="Instancias da Federação" action="statistics"/>
+                            <p:menuitem value="Configurações de Elasticidade" action="configurations"/>
+                            <p:menuitem value="Configurações de Chaves de Acesso" action="keys"/>
                         </p:submenu>
                         
                     </p:panelMenu>
